--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pug": "^3.0.0",
     "pug-html-loader": "^1.1.5",
     "pug-plain-loader": "^1.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vue-waterfall-easy": "^2.4.4"
   },
   "eslintConfig": {
     "root": true,
